# sindibad-prodeng-task

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
autotag/: __init__.py  autotag.db  config.py  db.py  models.py
autotag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autotag/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
autotag/app/data/: rules.yaml  sample_messages.jsonl
autotag/app/data/models/: category.joblib  svc_type.joblib
autotag/app/routers/: messages.py  tagging.py  tickets.py
autotag/app/services/: __init__.py  clarification_bot.py  confidence_policy.py  lang_and_scrub.py  llm_adjudicator.py  ml_classifier.py  rules_engine.py  tag_writer.py
autotag/routers/: __init__.py  tagging.py
autotag/scripts/: export_metrics.py  seed_db.py  train_ml.py
autotag/services/: __init__.py  clarification_bot.py  confidence_policy.py  lang_and_scrub.py  llm_adjudicator.py  ml_classifier.py  rules_engine.py  tag_writer.py
autotag/tests/: conftest.py  test_ml.py  test_rules.py  test_tagging_flow.py
